# ossim-gui

./: .gitignore  CMakeLists.txt  README.md
apps/ossim-geocell/: ossim-geocell.cpp
images/: images.qrc.depends
include/ossimGui/: About.h  AdjustableParameterEditor.h  AnnotationItem.h  AutoMeasurementDialog.h  BandSelectorEditor.h  BrightnessContrastEditor.h  ChipperDialog.h  Common.h  ConnectableDisplayObject.h  ConnectableImageObject.h  ConnectableObject.h  CopyChainVisitor.h  DataManager.h  DataManagerPropertyView.h  DataManagerWidget.h  DisplayTimerJobQueue.h  Event.h  Export.h  ExportImageDialog.h  GatherImageViewProjTransVisitor.h  GlWidget.h  HistogramRemapperEditor.h  HistogramWidget.h  HsiRemapperEditor.h  Image.h  ImageMdiSubWindow.h  ImageScrollView.h  ImageViewManipulator.h  ImageWidget.h  ImageWriterJob.h  IvtGeomTransform.h  MainWindow.h  MarkPoint.h  MdiSubWindowBase.h  MetricOverlay.h  MultiImageDialog.h  OpenImageDialog.h  OpenImageUrlJob.h  OssimObjectFactory.h  OverlayBase.h  (+87 more)
src/ossimGui/: About.cpp  AdjustableParameterEditor.cpp  AnnotationItem.cpp  AutoMeasurementDialog.cpp  BandSelectorEditor.cpp  BrightnessContrastEditor.cpp  ChipperDialog.cpp  ConnectableDisplayObject.cpp  ConnectableImageObject.cpp  ConnectableObject.cpp  CopyChainVisitor.cpp  DataManager.cpp  DataManagerPropertyView.cpp  DataManagerWidget.cpp  DisplayTimerJobQueue.cpp  ExportImageDialog.cpp  GatherImageViewProjTransVisitor.cpp  GlWidget.cpp  HistogramRemapperEditor.cpp  HistogramWidget.cpp  HsiRemapperEditor.cpp  Image.cpp  ImageMdiSubWindow.cpp  ImageScrollView.cpp  ImageViewManipulator.cpp  ImageWidget.cpp  ImageWriterJob.cpp  IvtGeomTransform.cpp  MainWindow.cpp  MarkPoint.cpp  MdiSubWindowBase.cpp  MetricOverlay.cpp  MultiImageDialog.cpp  OpenImageDialog.cpp  OpenImageUrlJob.cpp  OssimObjectFactory.cpp  OverlayBase.cpp  PlanetMdiSubWindow.cpp  PolygonRemapperDialog.cpp  PositionInformationDialog.cpp  (+12 more)
src/ossimGui/ui/: About.ui  AdjustableParameterEditor.ui  AutoMeasurementDialog.ui  BandSelectorEditor.ui  BrightnessContrastEditor.ui  ExportImageDialog.ui  HistogramRemapperEditor.ui  HsiRemapperEditor.ui  MainWindow.ui  MultiImageDialog.ui
